--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-  <h2>Hello World </h2>
+  <img src="WebBanner2023.png" alt="Banner" width="900" height="300">
   
-  </head>
+ </head>
 </html>
